Fix spacings

--- a/src/sections/HomePortfolio/index.css
+++ b/src/sections/HomePortfolio/index.css
@@ -70,11 +70,11 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-top: $spacing-224;
+  margin-top: $spacing-136;
 
   @include Breakpoint-mobileOnly {
     flex-direction: column;
-    margin-top: $spacing-136;
+    margin-top: $spacing-52;
   }
 }
 
